# fetch

./: .commit  .gitignore  CMakeLists.txt
src/: CMakeLists.txt  database.hpp  dual.cpp  dual.hpp  main.cpp  main_menu.cpp  main_menu.hpp  progress.hpp
src/dual/: scryfall.cpp  scryfall.hpp
